Fix TypeScript errors and update Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,8 @@
   "outputDirectory": "dist/public",
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/index"
-    },
-    {
       "source": "/(.*)",
-      "destination": "/api/index"
+      "destination": "/api/index.ts"
     }
   ]
 }
