Remove prebuild type check - build tools handle errors

--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
-    "check": "npx tsc",
+    "check": "npm exec -- tsc",
     "lint": "eslint . --ext .ts,.tsx --max-warnings 0",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "prebuild": "npm run check",
     "predeploy": "npm run check && npm run lint && npm run test",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
