--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "node_modules/.bin/vite build && node_modules/.bin/esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "npm exec -- tsc",
     "lint": "eslint . --ext .ts,.tsx --max-warnings 0",
@@ -82,7 +82,9 @@
     "winston": "^3.18.3",
     "wouter": "^3.3.5",
     "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0"
+    "zod-validation-error": "^3.4.0",
+    "esbuild": "^0.25.0",
+    "vite": "^5.4.20"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.4.2",
@@ -102,14 +104,12 @@
     "@vitest/coverage-v8": "^2.1.0",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.4",
-    "esbuild": "^0.25.0",
     "eslint": "^9.0.0",
     "postcss": "^8.4.47",
     "supertest": "^7.1.4",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
-    "vite": "^5.4.20",
     "vitest": "^2.1.0"
   },
   "optionalDependencies": {
